<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="heading"> Welcome to ALC 4.0</string>
    <string name="about_button">ABOUT ALC</string>
    <string name="about_label">About ALC</string>
    <string name="my_profile_button">MY PROFILE</string>
    <string name="my_profile_label">My Profile</string>
    <string name="profile_name">Mthulisi Leslie Zimba</string>
    <string name="track">Track: </string>
    <string name="country">Country: </string>
    <string name="email">Email: </string>
    <string name="phone">Phone Number: </string>
    <string name="slack">Slack Username: </string>
</resources>
